# rhizome

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INTERNALS.md  LICENSE  LSP-GUIDE.md  README.md
.github/workflows/: audit.yml  ci.yml  coverage.yml  performance.yml  release.yml
crates/rhizome-cli/: Cargo.toml
crates/rhizome-cli/src/: doctor.rs  main.rs  self_update.rs
crates/rhizome-cli/tests/: serve_lsp_runtime.rs
crates/rhizome-core/: Cargo.toml
crates/rhizome-core/src/: backend.rs  backend_selector.rs  blast_radius.rs  change_classifier.rs  config.rs  error.rs  export_cache.rs  fingerprint.rs  graph.rs  heuristic.rs  hyphae.rs  installer.rs  language.rs  lib.rs  parserless.rs  paths.rs  plugin.rs  project_summary.rs  repo_understanding.rs  root_detector.rs  symbol.rs
crates/rhizome-core/src/plugins/: mod.rs  toml_analyzer.rs
crates/rhizome-core/tests/: backend_boundary.rs
crates/rhizome-lsp/: Cargo.toml
crates/rhizome-lsp/src/: client.rs  convert.rs  edit.rs  lib.rs  manager.rs
crates/rhizome-lsp/tests/: deterministic.rs  live_lsp.rs  mock_server.rs
crates/rhizome-mcp/: Cargo.toml
crates/rhizome-mcp/.rhizome/: cache.json
crates/rhizome-mcp/src/: lib.rs  proxy.rs  server.rs  socket_server.rs
crates/rhizome-mcp/src/tools/: edit_tools.rs  export_tools.rs  file_tools.rs  mod.rs  symbol_tools.rs
crates/rhizome-mcp/src/tools/symbol_tools/: analysis.rs  blast_radius.rs  git.rs  inspection.rs  mod.rs  navigation.rs  onboard.rs  params.rs  query.rs
crates/rhizome-mcp/tests/: integration_tests.rs  mcp_write_boundary.rs
crates/rhizome-mcp/tests/fixtures/: sample.rs  sample.txt
crates/rhizome-treesitter/: Cargo.toml
crates/rhizome-treesitter/benches/: parse_symbols.rs
crates/rhizome-treesitter/src/: lib.rs  parser.rs  queries.rs  symbols.rs
crates/rhizome-treesitter/tests/: graph_integration.rs
crates/rhizome-treesitter/tests/fixtures/: large_sample.rs  sample.c  sample.cpp  sample.java  sample.php  sample.py  sample.rb  sample.ts
docs/: ARCHITECTURE.md  CONFIG.md  INTERNALS.md  LANGUAGE-SETUP.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  architecture.md  config.md  internals.md  language-setup.md  plugin-authoring.md  plugin-interface.md  roadmap.md  tooling.md  troubleshooting.md
docs/plans/: README.md
