[workspace]
members = [
    "crates/rhizome-core",
    "crates/rhizome-treesitter",
    "crates/rhizome-lsp",
    "crates/rhizome-mcp",
    "crates/rhizome-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
spore = { git = "https://github.com/basidiocarp/spore", rev = "0bc2e878010e75e30e26fa517d747e97d59628b0" }
thiserror = "2"
toml = "1.1"

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
