[package]
name = "rhizome-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rhizome"
path = "src/main.rs"

[dependencies]
rhizome-core = { path = "../rhizome-core" }
rhizome-mcp = { path = "../rhizome-mcp" }
rhizome-treesitter = { path = "../rhizome-treesitter" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
