[package]
name = "rhizome-cli"
version = "0.7.6"
edition = "2024"
authors = ["William Newton"]
description = "Rhizome - Code intelligence MCP server with tree-sitter and LSP backends"
license = "MIT"
repository = "https://github.com/basidiocarp/rhizome"
readme = "../../README.md"
keywords = ["mcp", "code-intelligence", "tree-sitter", "lsp", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rhizome"
path = "src/main.rs"

[dependencies]
rhizome-core = { path = "../rhizome-core" }
rhizome-mcp = { path = "../rhizome-mcp" }
rhizome-treesitter = { path = "../rhizome-treesitter" }
spore = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde_json = "1"
toml.workspace = true
ureq = "3"
tempfile = "3"
which = "7"
ignore = "0.4"

# cargo-deb configuration
[package.metadata.deb]
maintainer = "William Newton"
license-file = ["../../LICENSE", "0"]
extended-description = "Rhizome provides symbol-level code navigation via MCP, using tree-sitter for instant offline parsing and LSP for deep cross-file intelligence."
section = "utility"
priority = "optional"
assets = [
  ["target/release/rhizome", "usr/bin/", "755"],
]

# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/rhizome", dest = "/usr/bin/rhizome", mode = "755" },
]
