[package]
name = "rhizome-core"
version = "0.7.2"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = { workspace = true }
which = "7"
tracing = "0.1"
toml = "1.0"
ignore = "0.4"
spore = { workspace = true }

[dev-dependencies]
tempfile = "3"
