[package]
name = "rhizome-core"
version = "0.7.3"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = { workspace = true }
which = "7"
tracing = "0.1"
toml.workspace = true
ignore = "0.4"
spore = { workspace = true }

[dev-dependencies]
tempfile = "3"
