[package]
name = "rhizome-lsp"
version = "0.7.12"
edition = "2024"

[dependencies]
rhizome-core = { path = "../rhizome-core" }
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = { workspace = true }
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
url = "2"
tempfile = "3"
spore = { workspace = true }

[dev-dependencies]
