[package]
name = "rhizome-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rhizome-core = { path = "../rhizome-core" }
rhizome-treesitter = { path = "../rhizome-treesitter" }
rhizome-lsp = { path = "../rhizome-lsp" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
