[package]
name = "rhizome-mcp"
version = "0.11.4"
edition = "2024"

[dependencies]
rhizome-core = { path = "../rhizome-core" }
rhizome-treesitter = { path = "../rhizome-treesitter" }
rhizome-lsp = { path = "../rhizome-lsp" }
spore = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", default-features = false, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
ignore = "0.4"
tempfile = "3"
which = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
