[package]
name = "rhizome-treesitter"
version = "0.4.0"
edition = "2021"

[dependencies]
rhizome-core = { path = "../rhizome-core" }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
anyhow = "1"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
streaming-iterator = "0.1"
