[package]
name = "rhizome-treesitter"
version = "0.7.3"
edition = "2024"

[dependencies]
rhizome-core = { path = "../rhizome-core" }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-elixir = "0.3"
# tree-sitter-kotlin uses old tree-sitter 0.20, incompatible with 0.26
tree-sitter-lua = "0.2"
tree-sitter-swift = "0.6"
tree-sitter-zig = "1"
tree-sitter-haskell = "0.23"
tree-sitter-toml = { version = "0.7", package = "tree-sitter-toml-ng" }
anyhow = "1"
thiserror = { workspace = true }
ignore = "0.4"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3"
