[package]
name = "rhizome-treesitter"
version = "0.7.14"
edition = "2024"

[features]
default = [
    "lang-bash",
    "lang-c",
    "lang-cpp",
    "lang-elixir",
    "lang-go",
    "lang-java",
    "lang-javascript",
    "lang-lua",
    "lang-php",
    "lang-python",
    "lang-ruby",
    "lang-rust",
    "lang-typescript",
    "lang-zig",
]
lang-all = [
    "lang-bash",
    "lang-c",
    "lang-cpp",
    "lang-csharp",
    "lang-elixir",
    "lang-go",
    "lang-haskell",
    "lang-java",
    "lang-javascript",
    "lang-lua",
    "lang-php",
    "lang-python",
    "lang-ruby",
    "lang-rust",
    "lang-swift",
    "lang-typescript",
    "lang-zig",
]
lang-bash = ["dep:tree-sitter-bash"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-go = ["dep:tree-sitter-go"]
lang-haskell = ["dep:tree-sitter-haskell"]
lang-java = ["dep:tree-sitter-java"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-lua = ["dep:tree-sitter-lua"]
lang-php = ["dep:tree-sitter-php"]
lang-python = ["dep:tree-sitter-python"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-rust = ["dep:tree-sitter-rust"]
lang-swift = ["dep:tree-sitter-swift"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-zig = ["dep:tree-sitter-zig"]

[dependencies]
rhizome-core = { path = "../rhizome-core" }
tree-sitter = "0.26"
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-bash = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
# tree-sitter-kotlin uses old tree-sitter 0.20, incompatible with 0.26
tree-sitter-lua = { version = "0.5", optional = true }
tree-sitter-swift = { version = "0.6", optional = true }
tree-sitter-zig = { version = "1", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
anyhow = "1"
thiserror = { workspace = true }
ignore = "0.4"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
streaming-iterator = "0.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "parse_symbols"
harness = false
